[package]
name = "reerror"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.5", optional = true}
wgpu = {version = "0.13", optional = true}

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"

[features]
image = ["dep:image"]
wgpu = ["dep:wgpu"]
